--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.2",
     "@types/matter-js": "^0.19.8",
-    "chroma-js": "^3.1.2",
+    "chroma.ts": "^1.0.10",
     "matter-js": "^0.20.0",
     "tailwindcss": "^4.0.2"
   }
